--- a/src/app/app.html
+++ b/src/app/app.html
@@ -43,12 +43,6 @@
             Campaign
           </div>
         </button>
-        <button menuClose ion-item (click)="chart()">
-            <img class="page-img" src='assets/icon/chart.svg' />
-            <div class="page-title">
-              Chart
-            </div>
-          </button>
           <button menuClose ion-item (click)="dayReport()">
               <img class="page-img" src='assets/icon/weekly-calendar.svg' />
               <div class="page-title">
@@ -65,6 +59,12 @@
                 <img class="page-img" src='assets/icon/sales.svg' />
                 <div class="page-title">
                   Employee Sales
+                </div>
+              </button>
+              <button menuClose ion-item (click)="chart()">
+                <img class="page-img" src='assets/icon/chart.svg' />
+                <div class="page-title">
+                  Graphical Details
                 </div>
               </button>
                <button menuClose ion-item (click)="holdBills()">
