--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -13,6 +13,13 @@ page-home {
         padding-left: 7.5px;
     }
 
+    .toolbar-background {
+        border-color: #488aff;
+        background: rgba(0,0,0,0);
+        /* background: -webkit-gradient(linear, left top, right top, from(#5680ab), to(#34495E)); */
+        /* background: linear-gradient(to right, #5680ab, #34495E); */
+    }
+
     .totalcall-row{
         justify-content: center;
         margin-top: 15px;
